[gd_scene load_steps=12 format=3 uid="uid://84lj7xqp70op"]

[ext_resource type="Theme" uid="uid://564kf8hrx27g" path="res://main_theme.tres" id="1_ev7nr"]
[ext_resource type="Script" uid="uid://bn3ty48tehq68" path="res://scripts/cardui.gd" id="2_26c5q"]
[ext_resource type="StyleBox" uid="uid://bqwhnhyy6qrhq" path="res://card_hover_style.tres" id="3_gu2up"]
[ext_resource type="Script" uid="uid://bjoduiggnyfko" path="res://scripts/card_state_machine.gd" id="3_r3oav"]
[ext_resource type="Script" uid="uid://1pt6jj6aqsfd" path="res://scripts/card_base_state.gd" id="4_3jl2n"]
[ext_resource type="Texture2D" uid="uid://b8td63rh50pnr" path="res://assets/card/pixel_art_large (4).png" id="4_i87p0"]
[ext_resource type="Script" uid="uid://dxar8uov0smgh" path="res://scripts/card_click_state.gd" id="5_veitp"]
[ext_resource type="Script" uid="uid://dx6m0fwb30f5j" path="res://scripts/card_dragging_state.gd" id="6_x6vvd"]
[ext_resource type="Script" uid="uid://c5xrn5hnfaflv" path="res://scripts/card_released_state.gd" id="7_8p030"]
[ext_resource type="Script" uid="uid://b3xd7mb43wcik" path="res://scripts/card_aiming_state.gd" id="8_veitp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ev7nr"]
size = Vector2(149.128, 217.094)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.24
offset_top = -50.0
offset_right = -1475.24
offset_bottom = -715.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.585, 0.585)
theme = ExtResource("1_ev7nr")
script = ExtResource("2_26c5q")

[node name="Panel" type="Panel" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.74
offset_bottom = -15.925
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_gu2up")

[node name="Cost" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 8.95725
offset_top = 1.7094
offset_right = 36.9572
offset_bottom = 27.7094
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = -2.00002
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00924, 1.58387)
mouse_filter = 2
texture = ExtResource("4_i87p0")
expand_mode = 1

[node name="droppointdetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="droppointdetector"]
position = Vector2(74.5641, 110.256)
shape = SubResource("RectangleShape2D_ev7nr")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_r3oav")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_3jl2n")

[node name="CardClickState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_veitp")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_x6vvd")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_8p030")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_veitp")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="droppointdetector" to="." method="_on_droppointdetector_area_entered"]
[connection signal="area_exited" from="droppointdetector" to="." method="_on_droppointdetector_area_exited"]
